--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-watch": "~0.6.0",
     "markdown-pdf": "^2.2.0",
-	"reveal.js": "^2.6.2"
+    "phantomjs": "^1.9.13",
+    "reveal.js": "^2.6.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
