--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zenika-formation-framework",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Framework for displaying slides and building pdf's for Zenika Training",
   "author": "Zenika",
   "repository": {
@@ -19,6 +19,8 @@
     "reveal.js": "^2.6.2"
   },
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0"
   }
 }
