--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "private": "true",
   "dependencies": {
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "~0.9.0",
+    "grunt-contrib-copy": "^0.8.0"
     "grunt-contrib-watch": "~0.6.0",
     "markdown-pdf": "^5.1.0",
     "through": "^2.3.6",
@@ -19,8 +21,6 @@
     "reveal.js": "^2.6.2"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0"
+    "grunt": "^0.4.5"
   }
 }
