--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zenika-formation-framework",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Framework for displaying slides and building pdf's for Zenika Training",
   "author": "Zenika",
   "repository": {
@@ -11,7 +11,7 @@
   "dependencies": {
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "~0.9.0",
-    "grunt-contrib-copy": "^0.8.0"
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "~0.6.0",
     "markdown-pdf": "^5.1.0",
     "through": "^2.3.6",
