--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "~0.6.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-filerev-replace": "^0.1.4",
     "grunt-sed": "~0.1.0",
     "markdown-pdf": "^5.1.0",
     "through": "^2.3.6",
