--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": "true",
   "dependencies": {
+    "duplexer": "^0.1.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-copy": "^0.8.0",
@@ -17,11 +18,10 @@
     "grunt-filerev-replace": "^0.1.4",
     "grunt-sed": "~0.1.0",
     "markdown-pdf": "^5.1.0",
-    "through": "^2.3.6",
-    "duplexer": "^0.1.1",
-    "split": "^0.3.3",
     "phantomjs": "^1.9.13",
-    "reveal.js": "^2.6.2"
+    "reveal.js": "^3.1.0",
+    "split": "^0.3.3",
+    "through": "^2.3.6"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
