--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "private": "true",
   "dependencies": {
     "duplexer": "^0.1.1",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-copy": "^0.8.0",
@@ -22,8 +24,5 @@
     "reveal.js": "^3.1.0",
     "split": "^0.3.3",
     "through": "^2.3.6"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5"
   }
 }
