--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": "true",
   "dependencies": {
+    "browser-sync": "^2.9.8",
     "duplexer": "^0.1.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -19,6 +20,9 @@
     "grunt-filerev": "^2.3.1",
     "grunt-filerev-replace": "^0.1.4",
     "grunt-sed": "~0.1.0",
+    "gulp": "^3.9.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-replace": "^0.5.4",
     "markdown-pdf": "^5.1.0",
     "phantomjs": "^1.9.13",
     "reveal.js": "^3.1.0",
