--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zenika-formation-framework",
-  "version": "1.0.3",
+  "version": "1.1.0-deploy-bin-script-4",
   "description": "Framework for displaying slides and building PDFs for Zenika Training",
   "author": "Zenika",
   "repository": {
