fix(#128): les PDF générés avec Phantom présentent des pages blanches et un background décalé
- Upgrade à Phantom 2.1
- Suppression de l'utilisation des XHR avec responseType=json car semble mal supporté par Phantom 2

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-replace": "^0.5.4",
     "markdown-pdf": "^5.1.0",
-    "phantomjs": "^1.9.13",
+    "phantomjs-prebuilt": "^2.1.13",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
     "reveal.js": "^2.6.2",
