:ok_hand: code review changes

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "grunt-filerev": "^2.3.1",
     "grunt-filerev-replace": "^0.1.4",
     "grunt-sed": "~0.1.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "markdown-pdf": "^5.1.0",
     "phantomjs": "^1.9.13",
