--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-sync": "^2.9.8",
     "del": "^2.2.2",
     "duplexer": "^0.1.1",
+    "git-rev-sync": "^1.8.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
