chore(phantomjs): upgrade to phantomjs 2

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "markdown-pdf": "^5.1.0",
-    "phantomjs": "^1.9.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
     "reveal.js": "^2.6.2",
