--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zenika-formation-framework",
-  "version": "2.3.0",
+  "version": "2.4.0-0",
   "description": "Framework for displaying slides and building PDFs for Zenika Training",
   "author": "Zenika",
   "repository": {
