feat: replace highlight.js for prism.js

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-replace": "^0.5.4",
     "markdown-pdf": "^5.1.0",
     "phantomjs": "^1.9.0",
+    "prismjs": "^1.6.0",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
     "reveal.js": "^2.6.2",
