--- a/package.json
+++ b/package.json
@@ -41,9 +41,16 @@
     "zenika-formation-deploy": "deploy.js"
   },
   "scripts": {
+    "lint": "eslint --fix *.js reveal/**/*.js",
+    "preversion": "npm run lint",
     "postpublish": "node -r dotenv/config rebuild-all"
   },
+  "pre-commit": ["lint"],
   "devDependencies": {
-    "dotenv": "^4.0.0"
+    "dotenv": "^4.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
+    "pre-commit": "^1.2.2"
   }
 }
