--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "browser-sync": "^2.9.8",
+    "chrome-remote-interface": "^0.23.0",
     "del": "^2.2.2",
     "duplexer": "^0.1.1",
     "git-rev-sync": "^1.8.0",
@@ -25,6 +26,7 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "lighthouse": "^2.0.0",
     "markdown-pdf": "^5.1.0",
     "phantomjs": "^1.9.0",
     "prismjs": "^1.6.0",
