--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "preversion": "npm run lint",
     "postpublish": "node -r dotenv/config rebuild-all"
   },
-  "pre-commit": ["lint"],
+  "pre-commit": [
+    "lint"
+  ],
   "devDependencies": {
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
