--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "browser-sync": "^2.9.8",
-    "chrome-remote-interface": "^0.23.0",
     "del": "^2.2.2",
     "duplexer": "^0.1.1",
     "git-rev-sync": "^1.8.0",
@@ -26,10 +25,10 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "lighthouse": "~2.0.0",
     "markdown-pdf": "^5.1.0",
     "phantomjs": "^1.9.0",
     "prismjs": "^1.6.0",
+    "puppeteer": "^0.10.1",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
     "reveal.js": "^2.6.2",
@@ -54,7 +53,7 @@
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.7.0",
     "pre-commit": "^1.2.2"
   }
 }
