:wrench: replace PhantomJS by Chrome for slide deck PDF generation (#187)
Also added eslint config airbnb

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "markdown-pdf": "^5.1.0",
     "phantomjs": "^1.9.0",
     "prismjs": "^1.6.0",
+    "puppeteer": "^0.10.1",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
     "reveal.js": "^2.6.2",
@@ -35,15 +36,24 @@
     "through": "^2.3.6"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=7.10.1"
   },
   "bin": {
     "zenika-formation-deploy": "deploy.js"
   },
   "scripts": {
+    "lint": "eslint --fix *.js reveal/**/*.js",
+    "preversion": "npm run lint",
     "postpublish": "node -r dotenv/config rebuild-all"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "devDependencies": {
-    "dotenv": "^4.0.0"
+    "dotenv": "^4.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.7.0",
+    "pre-commit": "^1.2.2"
   }
 }
