--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/Zenika/zenika-formation-framework"
   },
   "dependencies": {
+    "base64-img": "^1.0.3",
     "browser-sync": "^2.9.8",
     "del": "^2.2.2",
     "duplexer": "^0.1.1",
@@ -25,10 +26,10 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "markdown-pdf": "^5.1.0",
-    "phantomjs": "^1.9.0",
+    "highlight.js": "^9.12.0",
     "prismjs": "^1.6.0",
     "puppeteer": "^0.10.1",
+    "remarkable": "^1.7.1",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
     "reveal.js": "^2.6.2",
