--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "browser-sync": "^2.9.8",
     "del": "^2.2.2",
     "duplexer": "^0.1.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "git-rev-sync": "^1.8.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
@@ -26,15 +28,20 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "headjs": "^1.0.3",
     "highlight.js": "^9.12.0",
+    "html-webpack-plugin": "^2.30.1",
+    "markdown-image-loader": "^1.0.4",
     "prismjs": "^1.6.0",
     "puppeteer": "^0.10.1",
     "remarkable": "^1.7.1",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
-    "reveal.js": "^2.6.2",
+    "reveal.js": "^3.6.0",
     "split": "^0.3.3",
-    "through": "^2.3.6"
+    "style-loader": "^0.19.1",
+    "through": "^2.3.6",
+    "webpack": "^3.10.0"
   },
   "engines": {
     "node": ">=8.2.1"
@@ -51,6 +58,7 @@
     "lint"
   ],
   "devDependencies": {
+    "css-loader": "^0.28.9",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
