--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.30.1",
     "markdown-image-loader": "^1.0.5",
+    "monet": "^0.8.10",
     "prismjs": "^1.6.0",
     "puppeteer": "^0.10.1",
     "remarkable": "^1.7.1",
@@ -39,9 +40,11 @@
     "request-promise-native": "^1.0.3",
     "reveal.js": "^3.6.0",
     "split": "^0.3.3",
+    "string-replace-loader": "^1.3.0",
     "style-loader": "^0.19.1",
     "through": "^2.3.6",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "engines": {
     "node": ">=8.2.1"
