--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zenika-formation-framework",
-  "version": "3.1.0",
+  "version": "3.2.0-rc1",
   "description": "Framework for displaying slides and building PDFs for Zenika Training",
   "author": "Zenika",
   "repository": {
