:construction_worker_man: upgrade ci to circleci 2

--- a/.editorconfig
+++ b/.editorconfig
@@ -20,5 +20,5 @@ insert_final_newline = true
 trim_trailing_whitespace = false
 indent_size = 2
 
-[{*.json,*.js,*.css}]
+[{*.json,*.js,*.css,*.yml}]
 indent_size = 2
